objects/ASI_CRM_MY_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ASI_CRM_Field_ID_Contract_FGR__c</fullName>
        <label>Field ID - Contract (Free Goods Request)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Field_ID_Contract_PR__c</fullName>
        <label>Field ID - Contract (Payment Request)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Field_ID_Outlet_FGR__c</fullName>
        <label>Field ID - Outlet (Free Goods Request)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Field_ID_Outlet_PR__c</fullName>
        <label>Field ID - Outlet (Payment Request)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_GST_Rate__c</fullName>
        <label>GST Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_OfftakeInvoiceList__c</fullName>
        <label>Offtake Invoice Listing</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Offtake_Cutoff_Day__c</fullName>
        <label>Offtake Cutoff Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_ParentOfftakeRpt__c</fullName>
        <label>Parent Offtake Report</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_RT_FreeGoodsRequests__c</fullName>
        <label>RT - Free Goods Requests</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_RT_PaymentRequests__c</fullName>
        <label>RT - Payment Request</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Report_Suggested_FOC_History__c</fullName>
        <label>Report - Suggested FOC History</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Salesman_Commission__c</fullName>
        <label>Salesman Commission</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Temp_Today__c</fullName>
        <label>Temp Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_UserID_ByPass__c</fullName>
        <description>Input the User ID that can bypass the validation rules, for data patching or data migration</description>
        <label>User ID By Pass Validation</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_Visitation_Plan_Outlet_Limit__c</fullName>
        <defaultValue>5000</defaultValue>
        <label>Visitation Plan Outlet Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_WS_Depletion_ReportID__c</fullName>
        <label>WS Depletion Report ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_WS_Depletion_RptID__c</fullName>
        <label>WS Forecast &amp; Target Report ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Record_Type_WS_Forecast__c</fullName>
        <description>WS Target Record Type : MY WS Forecast</description>
        <label>Record Type WS Forecast</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Record_Type_WS_Target__c</fullName>
        <label>Record Type WS Target</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT_Visitation_Plan_Detail_Ad_Hoc__c</fullName>
        <label>RT - Visitation Plan Detail - Ad-Hoc</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT_Visitation_Plan_Detail_Cold_Call__c</fullName>
        <label>RT - Visitation Plan Detail - Cold Call</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT_Visitation_Plan_Detail__c</fullName>
        <label>RT -  Visitation Plan Detail</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>ASI CRM MY Settings</label>
</CustomObject>